# Vitarana_Drone

./: .directory  .gitignore  LICENSE  README.md  file2dev.txt  sider.yml
bag_files/: Task_5_VD.bag
data/: stage5.xml
fold/fold1/: file3
pkg_ros_basics/: CMakeLists.txt  package.xml
pkg_ros_basics/config/: config_my.yml
pkg_ros_basics/launch/: .turtlesim.launch.swp  chatter.launch  first.launch  load_yaml.launch  move.launch  turtlesim.launch  webpage-launch.sh
pkg_ros_basics/scripts/: ServiceNode.py  client.py  move4.py  node_hello_ros.py  node_myMsg_talker.py  node_param_get_set.py  node_revolve.py
pkg_task0/: CMakeLists.txt  package.xml
pkg_task0/launch/: revolve.launch
pkg_task0/script/: Text File  final.py  move.py  move2.py  move3.py  node_revolve.py  revolve_node.py  semifinal.py
pkg_task1/: CMakeLists.txt  package.xml
pkg_task1/launch/: 1_control.launch  control.launch  task_1.launch
pkg_task1/script/: 1_Controller.py  attitude_controller(1).py  (+7 more)
pkg_task2/: CMakeLists.txt  package.xml
pkg_task3/: CMakeLists.txt  Task_3_VD_0983.bag  package.xml
pkg_task3/bag_files/: Task_3_VD_0983.bag
pkg_task3/data/: stage1.xml  stage7.xml
pkg_task3/launch/: task_3.launch
pkg_task3/scripts/: K_path_planner.py  K_position_controller.py  attitude_controller.py  img.py  img1.py  marker_detect.py  path.py  path_beta.py  path_planner.py  path_planner_final.py  path_planner_temp.py  position_controller.py  qr_detect.py  shutdown_hook.py
pkg_task4/: CMakeLists.txt  package.xml
pkg_task5/: package.xml
scripts/: gripper_client.py  scheduler_2.py
(+71 files in other folders)
